<resources>
    <string name="app_name">Desafio Webservice</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="remember">Remember</string>
    <string name="log_in">LOG IN</string>
    <string name="create_account">Create account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="save">SAVE</string>
    <string name="comic_cover">Comic Cover</string>
    <string name="marvel_logo">Marvel Logo</string>
    <string name="thumbnail_da_hq">thumbnail da hq</string>
    <string name="pages">Pages:</string>
    <string name="price">Price:</string>
    <string name="published">Published:</string>
    <string name="promotional_art">Promotional art</string>
    <string name="cover_hq_bigger">Cover HQ Bigger</string>

</resources>