<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.DetailFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1.0">

        <ImageView
            android:id="@+id/ivPromoArt"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.28"
            android:background="@color/red"
            android:contentDescription="@string/promotional_art"
            android:scaleType="center" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.75"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tvDetail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="60dp"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:text="AMAZING SPIDER-MAN (2014) #1\n(MHAN VARIANT)"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="16dp"
                    android:text="single"
                    android:textColor="@color/white"
                    android:textSize="13sp"
                    app:layout_constraintTop_toBottomOf="@id/tvDetail" />

                <TextView
                    android:id="@+id/tvPublished"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/published"
                    android:textColor="@color/white"
                    android:textSize="13sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@id/tvPrice"
                    app:layout_constraintStart_toStartOf="@id/tvPages" />

                <TextView
                    android:id="@+id/tvPublishedValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/published"
                    android:textColor="@color/white"
                    android:textSize="13sp"
                    app:layout_constraintBottom_toTopOf="@id/tvPrice"
                    app:layout_constraintStart_toEndOf="@id/tvPublished" />

                <TextView
                    android:id="@+id/tvPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/price"
                    android:textColor="@color/white"
                    android:textSize="13sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@id/tvPages"
                    app:layout_constraintStart_toStartOf="@id/tvPages" />

                <TextView
                    android:id="@+id/tvPriceValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/price"
                    android:textColor="@color/white"
                    android:textSize="13sp"
                    app:layout_constraintBottom_toTopOf="@id/tvPages"
                    app:layout_constraintStart_toEndOf="@id/tvPages" />

                <TextView
                    android:id="@+id/tvPages"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginBottom="50dp"
                    android:text="@string/pages"
                    android:textColor="@color/white"
                    android:textSize="13sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/tvPagesValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/pages"
                    android:textColor="@color/white"
                    android:textSize="13sp"
                    app:layout_constraintBottom_toBottomOf="@id/tvPages"
                    app:layout_constraintStart_toEndOf="@id/tvPages" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.33" />

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/tbDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/back" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="100dp"
        android:layout_height="140dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:contentDescription="@string/thumbnail_da_hq"
        app:layout_constraintBottom_toBottomOf="@id/guideline2"
        app:layout_constraintEnd_toStartOf="@id/guideline1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tbDetail">

        <ImageView
            android:id="@+id/ivThumbnail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:background="@color/white"
            android:contentDescription="@string/comic_cover"
            android:scaleType="fitXY" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>